@@ -21,7 +21,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 import org.springframework.security.oauth2.jwt.Jwt;
 import org.springframework.security.oauth2.jwt.JwtDecoders;
@@ -29,7 +28,7 @@ import org.springframework.security.oauth2.jwt.JwtException;
 import org.springframework.stereotype.Service;
 
 @Service
-public class JwtUtils {
+public record JwtUtils(ExternalCredsConfig externalCredsConfig) {
 
   public static final String PASSPORT_JWT_V11_CLAIM = "passport_jwt_v11";
   public static final String GA4GH_PASSPORT_V1_CLAIM = "ga4gh_passport_v1";
@@ -37,12 +36,6 @@ public class JwtUtils {
   public static final String VISA_TYPE_CLAIM = "type";
   public static final String JKU_HEADER = "jku";
   public static final String JWT_ID_CLAIM = "jti";
-
-  private final ExternalCredsConfig externalCredsConfig;
-
-  public JwtUtils(ExternalCredsConfig externalCredsConfig) {
-    this.externalCredsConfig = externalCredsConfig;
-  }
 
   public LinkedAccountWithPassportAndVisas enrichAccountWithPassportAndVisas(
       LinkedAccount linkedAccount, OAuth2User userInfo) {
@@ -68,10 +61,7 @@ public class JwtUtils {
             passportJwt.getClaimAsStringList(GA4GH_PASSPORT_V1_CLAIM), Collections.emptyList());
 
     var visas =
-        visaJwtStrings.stream()
-            .map(this::decodeAndValidateJwt)
-            .map(JwtUtils::buildVisa)
-            .collect(Collectors.toList());
+        visaJwtStrings.stream().map(this::decodeAndValidateJwt).map(JwtUtils::buildVisa).toList();
 
     return new PassportWithVisas.Builder()
         .passport(buildPassport(passportJwt))
